# fluidsynth

./: .appveyor-mingw.yml  .appveyor-msys2.yml  .appveyor-vcpkg.yml  .appveyor.yml  .azure-pipelines-android.yml  .azure-pipelines-mac.yml  .azure-pipelines.yml  .cirrus.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .readthedocs.requirements.txt  .readthedocs.yml  .travis.yml  ANDROID_TESTING.md  ANDROID_TESTING_SOLUTION.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.old  Dockerfile  FluidSynthConfig.cmake.in  INSTALL  ISSUE_TEMPLATE.md  Luna Kim  Makefile.am  Makefile.android  NEWS  README-OSX  README.cmake  README.cmake.md  README.md  SECURITY.md  THANKS  TODO  WINDOWS_BUILD_MIGRATION.md  acinclude.m4  (+17 more)
android/: Android.mk  CMakeLists.txt  Makefile.android  README.Android.md  config.h  oboe-1.0.pc
android/fluidsynth-assetloader/: CMakeLists.txt  ext-build.sh  fluid_androidasset.c  fluid_androidasset.h
android/jni/: Android.mk  Application.mk  config.h
android/oboe-c/: CMakeLists.txt  oboe-c.cxx
doc/: CMakeLists.txt  Doxyfile  Doxyfile.cmake  FluidMixer.ppt  FluidSynth Thread safety paper for LAC 2011.odt  Makefile.am  README  _Doxyfile  example.c  fluidsettings.xml  fluidsettings.xsl  fluidsynth-v10-devdoc.xml  fluidsynth-v11-devdoc.txt  fluidsynth-v20-devdoc.txt  fluidsynth.1  fluidsynth_arpeggio.c  fluidsynth_fx.c  fluidsynth_metronome.c  fluidsynth_process.c  fluidsynth_register_adriver.c  fluidsynth_sfload_mem.c  fluidsynth_simple.c  ladspa.md  recent_changes.txt  reverbators.md  xtrafluid.txt
doc/android/: .gitignore  Makefile.android  README.Android.md  README.md  oboe-1.0.pc
doc/doxygen/: custom.css  fluidsettings.txt  fluidsettings.xsl  layout.xml  layout.xml.cmake
doc/examples/: CMakeLists.txt  example.c  fluidsynth_arpeggio.c  fluidsynth_enumsettings.cxx  fluidsynth_fx.c  fluidsynth_instruments.c  fluidsynth_metronome.c  fluidsynth_process.c  fluidsynth_register_adriver.c  fluidsynth_simple.c
doc/polymono/: Legato_demo.sf2  leg_0.txt  leg_00.txt  leg_01.txt  leg_1.txt  leg_2.txt  leg_3.txt  leg_4.txt  leg_por_0.txt  leg_por_00.txt  leg_por_01.txt  leg_por_1.txt  leg_por_2.txt  leg_por_3.txt  leg_por_4.txt  poly_mono_0.txt  poly_mono_1.txt  poly_mono_2.txt  poly_mono_3.txt  poly_mono_4.txt  poly_mono_5.txt  readme.txt
doc/usage/: _overview.txt  advanced.txt  audio_driver.txt  creating_settings.txt  creating_synth.txt  file_renderer.txt  loading_soundfonts.txt  manual_rendering.txt  midi_player.txt  midi_player_mem.txt  midi_router.txt  multi_channel.txt  realtime_midi.txt  sending_midi.txt  sequencer.txt  shell.txt  synth_context.txt
doc/wiki/: .gitignore  Applications.md  Audio-Drivers.md  BuildingForAndroid.md  BuildingWithCMake.md  ChangeLog.md  Documentation.md  Download.md  ExampleCommandLines.md  FluidFeatures.md  FluidSettings.md  FluidSynth-configuration-files.md  Future.md  GettingStarted.md  LicensingFAQ.md  MadeWithFluidSynth.md  ReleaseCheckList.md  SoundFont.md  SoundFont3Format.md  UserManual.md  Using-prebuilt-libraries-on-Android.md  index.md  ladspa.md  reverbators.md
doc/zensical/: .gitignore  mkdocs.yml  requirements.txt
fluidsynth/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README-OSX  README.cmake  THANKS  TODO  acinclude.m4  autogen.sh  configure.ac
fluidsynth/cmake_admin/: CheckDIRSymbolExists.cmake  CheckSTDC.cmake  CreateLibtoolFile.cmake  DefaultDirs.cmake  FindMidiShare.cmake  FindPthreads.cmake  FindReadline.cmake  Makefile.am  report.cmake
fluidsynth/doc/: CMakeLists.txt  Doxyfile  Doxyfile.cmake  Makefile.am  README  example.c  example.sf2  fluidsynth-v10-devdoc.xml  fluidsynth-v11-devdoc.txt  fluidsynth.1  fluidsynth_arpeggio.c  midi_time.txt  xtrafluid.txt
fluidsynth/include/: CMakeLists.txt  Makefile.am  fluidsynth.h
fluidsynth/sf2/: Makefile.am
fluidsynth/src/: CMakeLists.txt  Makefile.am  config.cmake  config.h.in  config_macos.h  config_macosx.h  config_win32.cmake  config_win32.h  config_win32.h.in  fluid_adriver.c  fluid_adsr_env.h  fluid_alsa.c  fluid_chan.c  (+59 more)
gcem/: .appveyor.yml  .lgtm.yml  .travis.yml  CMakeLists.txt  NOTICE.txt
src/: CMakeLists.txt  Makefile.am  config.cmake  config.h.in  config_macos.h  config_macosx.h  config_macosx_pb.h  config_win32.cmake  config_win32.h  config_win32.h.in  fluid_adriver.c  fluid_alsa.c  fluid_alsa2.c  fluid_aufile.c  fluid_chan.c  fluid_chan.h  fluid_cmd.c  fluid_conv.c  fluid_conv.h  fluid_coreaudio.c  fluid_coremidi.c  fluid_dart.c  fluid_defsfont.c  fluid_defsfont.h  fluid_dll.c  fluid_dsound.c  fluid_dsp_core.c  fluid_event.c  fluid_event_priv.h  fluid_gen.c  fluid_hash.c  fluid_jack.c  fluid_mdriver.c  fluid_midi.c  fluid_midi.h  fluid_midishare.c  fluid_mod.c  fluid_oss.c  fluid_phase.h  fluid_portaudio.c  (+15 more)
test/: CMakeLists.txt  README.md  command-lines.txt  dump_sfont.c  run-manual-regression.sh  test.h  test_ABI.cpp  test_constexpr_lookuptab.c  test_ct2hz.c  test_default_mod.c  test_defsfont_preset_iteration.c  test_fast_render.c  test_file_seek_tell.c  test_fluid_voice_add.c  test_fluid_voice_add_mod.c  test_fluid_voice_modulate.c  test_fluid_zone_check_mod.c  test_jack_obtaining_synth.c  test_lookup_table_conv.h  test_lookup_table_rvoice.h  test_lookup_tables.c  test_modulator.c  test_modulator.cpp  test_modulator_amount.c  test_modulator_links.c  test_mts_cc_tuning.c  test_pointer_alignment.c  test_portamento_time.cpp  test_possible_att_reduction.c  test_preset_pinning.c  test_preset_sample_loading.c  test_round_clip.cpp  test_sample_cache.c  test_sample_pitch_calculation.c  test_sample_rate_change.c  test_seq_event_queue_remove.c  test_seq_event_queue_sort.c  test_seq_evt_order.c  test_seq_evt_order.cpp  test_seq_scale.c  (+25 more)
tests/: CMakeLists.txt  Makefile  acos.cpp  asin.cpp  asinh.cpp  atan.cpp  copysign.cpp  cos.cpp  cov_check  erf.cpp  expm1.cpp  fabs.cpp  fabsl.cpp  fmod.cpp  hypot.cpp  incomplete_beta.cpp  incomplete_gamma.cpp  inv_sqrt.cpp  is_odd.cpp  lgamma.cpp  log.cpp  log10.cpp  log1p.cpp  log2.cpp  other.cpp  rounding.cpp  signbit.cpp  sinh.cpp  sqrt.cpp  tan.cpp  tanh.cpp
(+831 files in other folders)
