## Process this file with automake to produce Makefile.in

SUBDIRS = src doc include macbuild sf2 winbuild
EXTRA_DIST = TODO acinclude.m4 autogen.sh fluidsynth.pc.in fluidsynth.spec.in \
  fluidsynth.spec
DISTCLEANFILES = fluidsynth.pc
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = fluidsynth.pc
